# pydantic-versions

./: .gitignore  .gitmessage  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  zensical.toml
.gemini/rules/: agents.md
.github/workflows/: ci.yml  commit-messages.yml  docs.yml  release.yml
docs/: SOLUTIONS_compile_nested_family_gra.md  changelog.md  contributing.md  index.md
docs/assets/stylesheets/: pydantic-versions.css
docs/decisions/: 0001-schema-family-and-conversion-contract.md
docs/guide/: adoption-guidance.md  complex-config-example.md  concepts.md  django-ninja.md  external-families.md  generated-wire-contracts.md  getting-started.md  migrations.md  rendering.md  schema-patches.md  version-discovery.md
docs/reference/: api.md
docs/research/: index.md
scripts/: check_conventional_commits.py  validate_release.py
src/pydantic_versions/: __init__.py  _compiler.py  _planning.py  _runtime.py  _wire.py  core.py  declarations.py  exceptions.py  family.py  inspection.py  patches.py
tests/fixtures/: __init__.py
tests/fixtures/external_family/: __init__.py  models.py  schema_history.py
tests/integration/: test_consumer_scenario.py
tests/typing/: schema_family_contract.py
tests/unit/: test_django_ninja_compat.py  test_generated_wire_contracts.py  test_import.py  test_internal_coverage_gaps.py  test_inventory_and_plans.py  test_schema_family.py  test_validate_release.py  test_versioned_schema.py
