[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-versions"
version = "0.2.0"
description = "Bring version control and history to your Pydantic schemas"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Dariusz Panas" },
]
keywords = [
    "pydantic",
    "schemas",
    "schema-versioning",
    "validation",
    "migrations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.3,<3.0",
]

[project.urls]
Homepage = "https://github.com/dariuszpanas/pydantic-versions"
Documentation = "https://pydantic-versions.readthedocs.io/en/latest/"
Repository = "https://github.com/dariuszpanas/pydantic-versions"
Issues = "https://github.com/dariuszpanas/pydantic-versions/issues"

[dependency-groups]
dev = [
    "django-ninja>=1.6.2",
    "packaging>=24.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "zensical>=0.0.42",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pydantic_versions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_versions"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
